Styles and fixes

--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -6,13 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="7.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <Compile Remove="wwwroot\Angular\**" />
+    <Content Remove="wwwroot\Angular\**" />
+    <EmbeddedResource Remove="wwwroot\Angular\**" />
+    <None Remove="wwwroot\Angular\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Angular\" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="vue" Version="2.5.17" />
   </ItemGroup>
 
 </Project>
